# rustETL

./: Cargo.toml  README.md  docker-compose.yml  sql.sql
ServiceMesh/: .env  Cargo.toml  docker-compose.yml
ServiceMesh/src/: main.rs
ServiceMesh/src/domain/: adapter.rs  info.rs  mod.rs  service_adapter_domain.rs  service_info_domain.rs
ServiceMesh/src/helpers/: errors.rs
ServiceMesh/src/repo/: RepoManager.rs  ServiceAdapterRepostiory.rs  ServiceInfoRepository.rs  adapters.rs  info.rs  mod.rs  serviceAdapterRepo.rs
ServiceMesh/src/routes/: adapters.rs  info.rs  mod.rs  routes.rs
ServiceMesh/src/traits/: ServiceInfoRepostoryTrait.rs  domain.rs  mod.rs  repo_manager_trait.rs  repository.rs  serviceInfoRepositoryTraits.rs  service_adapter_domain_trait.rs  service_adapter_repository_trait.rs  service_info_domain_trait.rs  service_info_repository_traits.rs
ServiceMesh/src/types/: protocolUsed.rs  serviceAdapters.rs  serviceInfo.rs
classifier/: Cargo.toml
classifier/src/: conditions.rs  conditions_intiliazser.rs  main.rs
classifier/src/repo/: mongodb.rs
classifier/src/types/: classification.rs  classifier.rs  condition_type.rs  mod.rs  operator.rs
data_source/: Cargo.toml  event_store.json  mongodb_config.json  sftp_config.json
data_source/src/: main.rs
data_source/src/commands/: enums.rs  mod.rs  on_directory_list_command.rs  on_file_read_command.rs  on_record_map_command.rs  on_records_map_command.rs
data_source/src/commands/structs/: base.rs  mod.rs  on_directory_list_command.rs  (+2 more)
data_source/src/events/: directory_listed_event.rs  file_read_event.rs  mod.rs  records_mapped_event.rs
data_source/src/helpers/: crud_service.rs  mod.rs  move_file.rs  read_sftp_config.rs  register_update.rs
data_source/src/traits/: event_trait.rs  mod.rs
data_source/src/types/: data_source_state.rs  errors.rs  file_info.rs  mod.rs  mongo_db_config.rs  sftp_config.rs
(+35 files in other folders)
