[package]
name = "ServiceMesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
serde = {  version  = "1.0.195" }
serde_json = "1.0.113"
serde_derive ={version = "1.0.196"}
sqlx = {version = "0.7.3", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
shared_lib = { path = "../shared_lib" }
tokio = { version = "1.35", features = ["full"] }
dotenv ="0.15.0"
warp = "0.3.6"