[package]
name = "classifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "../shared_lib" }
serde_derive = "1.0.196"
serde ={ version =  "1.0.196", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8.0"
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }
lazy_static = "1.4.0"
#kafka = "0.10.0"
# openssl-sys = "0.9"
# openssl ="0.10"