[package]
name = "data_source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
serde = {  version  = "1.0.195" }
serde_json = "1.0.113"
bson = "2.9"
sharedLib = { path = "../sharedLib" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
